# com-etzhayyim-kuni-umi

./: .gitignore  CLAUDE.md  README.md  bb.edn  dependencies.edn  deps.edn  identity.edn  manifest.edn  manifest.jsonld  migration.edn  repository-contracts.edn  run_tests.clj  run_tests.sh
.well-known/: did.json
bpmn/: kuni-umi-deployment-workflow.bpmn
cells/: audit_witness.edn  commissioning.edn  construction_orchestration.edn  decommission.edn  deployment_planning.edn  schema.edn  site_survey.edn
cells/audit_witness/: README.md  __init__.py  cell.cljc  cell.py
cells/commissioning/: README.md  __init__.py  cell.py
cells/construction_orchestration/: README.md  __init__.py  cell.py
cells/decommission/: README.md  __init__.py  cell.cljc  cell.py
cells/deployment_planning/: README.md  (+3 more)
dmn/: counterparty-classification.md  jurisdiction-eligibility.md  proportionality-check.md
kotoba/: deploy.sh  ingest_mcp.cljc  ingest_mcp.py  schema.edn  seed.edn
lex/: auditRecord.edn  commissioningRecord.edn  constructionRecord.edn  decommissionRecord.edn  deploymentIntent.edn  siteAttestation.edn
py/: agent.py  requirements.txt  test_agent.py
robotics/: __init__.py  commissioning.cljc  commissioning.py  control.cljc  control.py  device_loop.py  kinematics.cljc  kinematics.py  plant.py  safety.py  test_commissioning.py  test_device_loop.py  test_kami_parity.py  test_kinematics.cljc  test_robotics.cljc  test_substrate.py
robotics/kami-bridge/: Cargo.toml  README.md
robotics/kami-bridge/src/: main.rs
scripts/: tasks-complex.edn  tasks.edn
wire/: manifest.jsonld
(+49 files in other folders)
